# telemetry-system

./: README.md  west.yml
.github/workflows/: build.yml
app/: CMakeLists.txt  Kconfig  debug.conf  overlay-modem.conf  prj.conf  rtt.conf
app/boards/: mimxrt1060_evk.overlay  nucleo_f302r8.overlay
app/src/: can_threads.c  can_threads.h  http_threads.c  http_threads.h  main.c  sd_threads.c  sd_threads.h  sockets.c  sockets.h
boards/arm/custom_plank/: README.md
scripts/: example_west_command.py
zephyr/: module.yml
